# ZMzettelkasten

./: AUTHORS  Makefile  Makefile.am  Makefile.in  NEWS  README  ZMzettelkasten.glade  ZMzettelkasten.gladep  ZMzettelkasten040RC1.tar  ZMzettelkasten041RC1.tar  ZMzettelkasten041RC3.tar  ZMzettelkasten1.glade  aclocal.m4  config.h  config.status  config.status.lineno  configure  configure.in  configure.scan  gammu  pen
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
pixmaps/: zm_zettel.xpm
po/: LINGUAS~  Makefile  Makefile.in  POTFILES  POTFILES.in~  ZMzettelkasten.pot  en.gmo  en.gmo.old  en.po  en.po~  en_po.bak  missing
src/: Makefile  Makefile.am  Makefile.in  Makefile.old  ZMzettelkasten  callbacks.c  callbacks.h  globals.h  interface.c  interface.h  main.c  my_file.c  my_file.h  my_functions.c  my_functions.h  my_text.c  my_text.h  my_zettel.c  my_zettel.h
src/.deps/: callbacks.P  callbacks.Po  interface.P  interface.Po  main.P  main.Po  my_file.P  my_file.Po  my_functions.P  my_functions.Po  my_text.P  my_text.Po  my_zettel.P  my_zettel.Po  support.P  support.Po
zettelkasten/: ZMzettelkasten  ZMzettelkasten.mo  export.hdr  help  hilfe  install.sh  install.sh~  maketar  maketar~  test.zkx_z3.xml  zettel.lang  zettel.lang~  zettelkasten.tmp  zettelkasten.zkn  zettelkasten.zkx
